[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/block.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/icecube.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/left-arrow_pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/left-arrow_hover.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/left-arrow.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Block" type="KinematicBody2D" groups=[
"blocks",
]]
position = Vector2( 288, 288 )
input_pickable = true
collision/safe_margin = 0.001
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.90735e-06, 1.90735e-06 )
scale = Vector2( 3.2, 3.2 )

[node name="ButtonLeft" type="TextureButton" parent="."]
visible = false
margin_left = -76.0
margin_top = -16.0
margin_right = -28.0
margin_bottom = 16.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonUp" type="TextureButton" parent="."]
visible = false
margin_left = -16.0
margin_top = -76.0
margin_right = 32.0
margin_bottom = -44.0
rect_rotation = 90.0939
rect_scale = Vector2( 1, -0.999487 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRight" type="TextureButton" parent="."]
visible = false
margin_left = 76.0
margin_top = -16.0
margin_right = 124.0
margin_bottom = 16.0
rect_scale = Vector2( -0.999995, 1 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonDown" type="TextureButton" parent="."]
visible = false
margin_left = -16.0
margin_top = 76.0
margin_right = 32.0
margin_bottom = 108.0
rect_rotation = -89.9279
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonLeft" to="." method="_on_ButtonLeft_pressed"]
[connection signal="pressed" from="ButtonUp" to="." method="_on_ButtonUp_pressed"]
[connection signal="pressed" from="ButtonRight" to="." method="_on_ButtonRight_pressed"]
[connection signal="pressed" from="ButtonDown" to="." method="_on_ButtonDown_pressed"]
